// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconDurationChip > renders correctly 1`] = `
<div
  class="evocon-duration-chip"
  data-v-6a2adfd8=""
>
  <span
    class="d-flex duration-chip-content align-center"
    data-v-6a2adfd8=""
  >
    <v-icon-stub
      class="mr-1"
      color="secondary-text"
      data-v-6a2adfd8=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z
    </v-icon-stub>
    <span
      class="content-editable hour-input"
      contenteditable="true"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text mr-1"
      data-v-6a2adfd8=""
    >
      h
    </span>
    <span
      class="content-editable minute-input"
      contenteditable="true"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text"
      data-v-6a2adfd8=""
    >
      m
    </span>
  </span>
</div>
`;

exports[`EvoconDurationChip > renders correctly if hour input is hidden 1`] = `
<div
  class="evocon-duration-chip"
  data-v-6a2adfd8=""
>
  <span
    class="d-flex duration-chip-content align-center"
    data-v-6a2adfd8=""
  >
    <v-icon-stub
      class="mr-1"
      color="secondary-text"
      data-v-6a2adfd8=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z
    </v-icon-stub>
    <!--v-if-->
    <!--v-if-->
    <span
      class="content-editable minute-input"
      contenteditable="true"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text"
      data-v-6a2adfd8=""
    >
      m
    </span>
  </span>
</div>
`;

exports[`EvoconDurationChip > renders correctly in disabled state 1`] = `
<div
  class="evocon-duration-chip evocon-duration-chip--disabled"
  data-v-6a2adfd8=""
>
  <span
    class="d-flex duration-chip-content align-center"
    data-v-6a2adfd8=""
  >
    <v-icon-stub
      class="mr-1"
      color="secondary-text"
      data-v-6a2adfd8=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z
    </v-icon-stub>
    <span
      class="content-editable hour-input"
      contenteditable="false"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text mr-1"
      data-v-6a2adfd8=""
    >
      h
    </span>
    <span
      class="content-editable minute-input"
      contenteditable="false"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text"
      data-v-6a2adfd8=""
    >
      m
    </span>
  </span>
</div>
`;

exports[`EvoconDurationChip > renders correctly in error state 1`] = `
<div
  class="evocon-duration-chip evocon-duration-chip--error"
  data-v-6a2adfd8=""
>
  <span
    class="d-flex duration-chip-content align-center"
    data-v-6a2adfd8=""
  >
    <v-icon-stub
      class="mr-1"
      color="secondary-text"
      data-v-6a2adfd8=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z
    </v-icon-stub>
    <span
      class="content-editable hour-input"
      contenteditable="true"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text mr-1"
      data-v-6a2adfd8=""
    >
      h
    </span>
    <span
      class="content-editable minute-input"
      contenteditable="true"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text"
      data-v-6a2adfd8=""
    >
      m
    </span>
  </span>
</div>
`;

exports[`EvoconDurationChip > renders correctly when value is null 1`] = `
<div
  class="evocon-duration-chip evocon-duration-chip--empty"
  data-v-6a2adfd8=""
>
  <span
    class="d-flex duration-chip-content align-center"
    data-v-6a2adfd8=""
  >
    <v-icon-stub
      class="mr-1"
      color="secondary-text"
      data-v-6a2adfd8=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z
    </v-icon-stub>
    <span
      class="content-editable hour-input"
      contenteditable="true"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text mr-1"
      data-v-6a2adfd8=""
    >
      h
    </span>
    <span
      class="content-editable minute-input"
      contenteditable="true"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text"
      data-v-6a2adfd8=""
    >
      m
    </span>
  </span>
</div>
`;

exports[`EvoconDurationChip > renders correctly without value entered 1`] = `
<div
  class="evocon-duration-chip evocon-duration-chip--empty"
  data-v-6a2adfd8=""
>
  <span
    class="d-flex duration-chip-content align-center"
    data-v-6a2adfd8=""
  >
    <v-icon-stub
      class="mr-1"
      color="secondary-text"
      data-v-6a2adfd8=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z
    </v-icon-stub>
    <span
      class="content-editable hour-input"
      contenteditable="true"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text mr-1"
      data-v-6a2adfd8=""
    >
      h
    </span>
    <span
      class="content-editable minute-input"
      contenteditable="true"
      data-v-6a2adfd8=""
    />
    <span
      class="static-text"
      data-v-6a2adfd8=""
    >
      m
    </span>
  </span>
</div>
`;
